# autograde-idp

./: .gitignore  README.md  prd.json  pyproject.toml  report-2026-05-16-082806.md
.github/workflows/: ci.yml
autograde_idp/: auth.py  cli.py  notas.py  profile.py  register.py  validar.py
autograde_idp/evidence/: __init__.py  artifacts.py  shell.py
docs/: handoff-exercicio-2.1.md
tests/: test_auth.py  test_evidence_artifacts.py  test_evidence_shell.py  test_imports.py  test_login.py  test_notas.py  test_profile.py  test_register.py  test_validar.py
