[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autograde-idp"
version = "0.1.0"
description = "CLI cliente do autograder IDP-TD (login Google Device Flow + submit de exercícios)."
requires-python = ">=3.9"
authors = [{ name = "Alex Lopes Pereira", email = "alexlopespereira@gmail.com" }]
license = { text = "MIT" }
dependencies = ["requests>=2.32"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "responses>=0.25"]

[project.scripts]
autograde = "autograde_idp.cli:main"

[tool.setuptools.packages.find]
include = ["autograde_idp*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
